2008-06-21  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/document-manager/anjuta-docman.c:
	Fix again #538798: UI selected tab document differs from real one
	Remove automatic page reordering (annoying when sorting tab with
	the same names)
	Do not reselect page on page switch as the page number could have
	changed just update document menu
	Update document menu after reordering all documents

2008-06-17  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/document-manager/anjuta-docman.c:
	Fix #538798: UI selected tab document differs from real one

2008-06-16  Johannes Schmid  <jhs@gnome.org>

	* plugins/language-support-cpp-java/plugin.c
	(set_indentation_param_emacs), (set_indentation_param_vim),
	(set_line_indentation), (get_line_indentation_base),
	(get_line_auto_indentation), (on_editor_char_inserted_cpp):
	
	Fixed #528699 – Auto-indent ignores spaces-per-indent settings

2008-06-15  Johannes Schmid  <jhs@gnome.org>
	
	* plugins/file-manager/file-model.c (on_file_model_changed):
	Fixed file monitoring
	
	* plugins/file-manager/file-view.c (file_view_show_extended_data),
	(file_view_selection_changed):
	
	Some code refactoring
	
	* plugins/file-manager/plugin.c (on_file_view_show_popup_menu):
	Hide "rename" menu item for now

2008-06-15  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/document-manager/anjuta-docman.c:
	Make sure that scintilla window is displayed

2008-06-15  Naba Kumar  <naba@gnome.org>

	* plugins/document-manager/anjuta-docman.c
	(anjuta_docman_set_current_document),
	(anjuta_docman_goto_uri_line_mark):
	* plugins/sourceview/sourceview.c (ieditor_goto_line):

	Restore text focus on switching editor with ALT+X and
	navigating from local-symbols view.
	
2008-06-15  Naba Kumar  <naba@gnome.org>

	* plugins/file-manager/file-view.c (file_view_show_extended_data):
	Fixed a crash on file selection. Gave enough buffer for the formated
	time print.
	
2008-06-15  Naba Kumar  <naba@gnome.org>
