@@ -1,3 +1,12 @@
+2008-06-28  Johannes Schmid  <jhs@gnome.org>
+
+	* plugins/file-manager/file-model.c (file_model_row_expanded),
+	(file_model_init), (file_model_finalize), (file_model_refresh):
+	
+	#538921 – Duplicated folders
+	Using sync API for now as the async approach does not seem to have any
+	advantages and just caused problems
+
 2008-06-21  Sébastien Granjoux  <seb.sfo@free.fr>
 
 	* plugins/document-manager/anjuta-docman.c:
